JPN-443 Fix broken layout when tag is in right rail. Add timestamp title to times element in discussion card

--- a/extensions/wikia/EmbeddableDiscussions/styles/EmbeddableDiscussions.scss
+++ b/extensions/wikia/EmbeddableDiscussions/styles/EmbeddableDiscussions.scss
@@ -25,6 +25,9 @@ $font-size-regular: 14px;
 $font-size-large: 16px;
 
 .embeddable-discussions-module {
+	@include flexbox();
+	@include flex-direction(column);
+
 	border: 1px solid $container-border-color;
 	margin: 0;
 	padding: 3px 21px 30px 27px;
@@ -150,6 +153,10 @@ $font-size-large: 16px;
 		height: 100%;
 		margin-right: 10px;
 		width: 48%;
+	}
+
+	.embeddable-discussions-post-detail-right-rail {
+		width: 100%;
 	}
 
 	.embeddable-discussions-reply-icon {
